@@ -121,12 +121,28 @@ Note: mpg123 returns errors on stderr, so your frontend should
 @I ID3v2.title:<text>
 	After loading a track with ID3v2 info, such lines occur for every line of the "title" data field and likewise for other fields (author, album, etc).
 
+Since version 9, ID3 info is wrapped in
+
+@I {
+...
+@I }
+
+to guide parsers.
+
 @I <a>
 			Status message after loading a song (no ID3 song info)
 			a = filename without path and extension
 
 @I LISTENTRY <n>: <url>
 	printout of playlists loaded with LOADLIST
+
+Since version 9, list printout is wrapped in
+
+@I {
+...
+@I }
+
+to help parsers decide if they got the whole list.
 
 @S <a> <b> ...
 	Stream info at beginning of playback, meaning
